fix layout of pre elements on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -110,6 +110,10 @@ header {
             line-height: 1.5;
         }
     }
+
+    pre.highlight {
+        white-space: pre-line;
+    }
 }
 
 /* Index Page Selectors */
